# OpenIngest

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
apps/: design.md  streamlit_dashboard.py
apps/web/: README.md  package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/components/: AirflowSection.tsx  Architecture.tsx  CLISection.tsx  CTA.tsx  CodeExample.tsx  ConnectorsSection.tsx  Docs.tsx  Features.tsx  Footer.tsx  GettingStarted.tsx  GithubIcon.tsx  Hero.tsx  LoadStrategies.tsx  Navbar.tsx  ProblemSolution.tsx  Roadmap.tsx  Stats.tsx  TrustedBy.tsx
configs/: datasets.yaml  pipeline.yaml  validation_rules.yaml
core/: airflow_runner.py  discovery.py  incremental.py  ingestion.py  lineage.py  metadata.py  notifications.py  observability.py  pipeline.py  quality.py  quality_report.py  quality_rules.py  reporting.py  scheduler.py  schema.py  validation.py  warehouse.py
core/airflow/: runner.py  task_factory.py
core/connectors/: __init__.py  base.py  registry.py
core/connectors/api/: __init__.py  rest_connector.py
core/connectors/cloud/: __init__.py  azure_connector.py  gcs_connector.py  s3_connector.py
core/connectors/formats/: __init__.py  csv_connector.py  excel_connector.py  json_connector.py  parquet_connector.py
dags/: openingest_dynamic_dag.py
data/raw/: employees.csv
docs/: CLI_REFERENCE.md  CONNECTORS.md  GETTING_STARTED.md  OPEN_SOURCE_READINESS.md  USABILITY_AND_OBSERVABILITY.md
models/: dataset.py  pipeline_run.py
openingest/: __init__.py  cli.py
openingest.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
openingest/templates/: __init__.py
openingest/templates/project/: README.md  docker-compose.yml
openingest/templates/project/configs/: datasets.yaml  pipeline.yaml  warehouse.yaml
scripts/: dashboard.py  data_quality_checks.py  discover_datasets.py  ingest_dataset.py  openingest.py  pipeline_history.py  report.py  run_pipeline.py  schema_validator.py  setup_database.py
scripts/commands/: add_dataset.py  airflow_cmd.py  discover.py  docker_cmd.py  doctor.py  graph.py  infer.py  init.py  profile.py  schedule.py  version.py
sql/: create_metadata_tables.sql  create_tables.sql
tests/: test_quality_report.py  test_quality_rules.py
utils/: config.py  config_loader.py  db.py  logger.py  metadata_logger.py  project.py  schema_utils.py
