[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openingest"
version = "2.5.1"
description = "Configuration-driven data ingestion framework with quality checks, metadata, and orchestration"
readme = "docs/USABILITY_AND_OBSERVABILITY.md"
requires-python = ">=3.10"
authors = [
  { name = "OpenIngest Contributors" }
]
license = "MIT"
dependencies = [
  "pandas",
  "sqlalchemy",
  "psycopg2-binary",
  "python-dotenv",
  "PyYAML==6.0.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.10"
]
web = [
  "streamlit>=1.36"
]

# v2.0 — Multi-format support
excel = [
  "openpyxl>=3.1.2"
]
parquet = [
  "pyarrow>=15.0"
]

# v2.0 — Cloud connectors
s3 = [
  "boto3>=1.34.0"
]
azure = [
  "azure-storage-blob>=12.19.0"
]
gcs = [
  "google-cloud-storage>=2.14.0"
]

# v2.0 — REST API connector
api = [
  "requests>=2.31.0"
]

# v2.5 — Notifications
notifications = [
  "requests>=2.31.0"
]

# All v2.0 extras together
v2 = [
  "openpyxl>=3.1.2",
  "pyarrow>=15.0",
  "boto3>=1.34.0",
  "azure-storage-blob>=12.19.0",
  "google-cloud-storage>=2.14.0",
  "requests>=2.31.0",
]

# Full install
all = [
  "openpyxl>=3.1.2",
  "pyarrow>=15.0",
  "boto3>=1.34.0",
  "azure-storage-blob>=12.19.0",
  "google-cloud-storage>=2.14.0",
  "requests>=2.31.0",
  "streamlit>=1.36",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.10",
]

[project.scripts]
openingest = "openingest.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["openingest*", "core*", "models*", "utils*", "scripts*"]
exclude = ["data*", "sql*", "dags*", "docs*", "tests*"]

[tool.setuptools.package-data]
"openingest.templates" = [
  "project/**",
  "project/.env",
  "project/.openingest",
  "project/**/.gitkeep",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
exclude = ["build"]
